--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,10 +23,11 @@
   "dependencies": {
     "@prisma/client": "^6.5.0",
     "@t3-oss/env-nextjs": "^0.12.0",
+    "better-auth": "^1.3.6",
     "next": "^15.2.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "zod": "^3.24.2"
+    "zod": "^3.22.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.3.1",
